src/objects/Inbox__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inboxes</relationshipLabel>
        <relationshipName>Inboxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <label>From Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reseller_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reseller Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inboxes (Reseller Account)</relationshipLabel>
        <relationshipName>Inboxes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reseller_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reseller Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Inboxes</relationshipLabel>
        <relationshipName>Inboxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unread</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Provider_Name__c</fullName>
        <label>Support Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Address__c</fullName>
        <label>To Address</label>
        <type>TextArea</type>
    </fields>
    <label>Inbox</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Status__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Subject__c</columns>
        <columns>Reseller_Account__c</columns>
        <columns>Reseller_Contact__c</columns>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Support_Provider_Name__c</columns>
        <columns>To_Address__c</columns>
        <columns>From_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reseller Inbox Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inboxes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>